# cleared

./: .actionlintrc  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  DISCLAIMER.md  LICENSE  Makefile  README.md  Taskfile.yml  mkdocs.yaml  pyproject.toml  requirements-dev.txt  ruff.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_WORKFLOW.md  release_message.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  release.yml  static_checks.yml
cleared/: __init__.py  engine.py  sample.py
cleared/cli/: main.py  simple_cli.py  utils.py
cleared/cli/cmds/: describe.py  format.py  info.py  report_verify.py  run.py
cleared/config/: __init__.py  structure.py
cleared/io/: base.py  filesystem.py  sql.py
cleared/transformers/: __init__.py  base.py  id.py  pipelines.py  registry.py  simple.py  temporal.py
docs/: cli-usage.md  contributing.md  custom-transformers-plugins.md  date-and-time-shifting.md  filter_deid_example.md  group-level-id-deidentification.md  healthcare-schema-support.md  index.md  linting_rules.md  logging-and-auditing.md  make_commands.md  multi-segment-tables.md  multi-table-deidentification.md  multi_table_pipeline_config.md  phi-detection.md  quickstart.md  release.md  rerun_deidentification_consistency.md  reverse.md  use_cleared_config.md  use_describe.md  using_the_python_api.md  value-casting.md  verify-deid-results.md  verify-documentation.md
docs/template/: use_this_template.md
examples/: cleared_config.yaml  data_loader_config.yaml  data_loader_usage.py  default_config.yaml  events_table_config.yaml  io_config.yaml  multi_table_config.yaml  multi_table_events.csv  multi_table_orders.csv  orders_table_config.yaml  pipeline_config.yaml  pipeline_usage.py  test_complex_config.yaml  test_dropper_datetime_issue.yaml  test_dropper_issue.yaml  test_duplicate_table_names.yaml  test_duplicate_transformer_uid.yaml  test_io_validation.yaml  test_lint_errors.yaml  test_lint_errors_ignored.yaml  test_missing_configs.yaml  test_multiple_transformers.yaml  test_path_overlap.yaml  test_system_directory_paths.yaml  test_table_dependency.yaml  test_table_name_mismatch.yaml  test_table_no_transformers.yaml  test_timeshift_invalid.yaml  test_timeshift_range.yaml  test_value_cast_validation.yaml  tutorial_config.yaml  tutorial_users.csv  upmc.yaml  users_config_v1.yaml  users_config_v2.yaml  users_table_config.yaml  verify-results-example.json
scripts/: clean.sh  init_project.sh  install_os_deps.sh  run_jupyter_remote.sh  run_pytest_ignore_error_5.sh  verify_deps.sh  verify_env.sh  watch.sh
tests/: __init__.py  test_basic.py  test_data_loaders.py  test_integration_with_event_type_filtering.py  test_multi_segment_integration.py  test_pipelines.py
tests/cli/: test_cli_integration.py  test_cli_utils.py  test_config_structure_regression.py  test_data_loader_config.py  test_engine_regression.py  test_multi_segment_cli.py  test_report_verify.py  test_test_mode.py  test_verify_core.py  test_verify_model.py  test_verify_utils.py
tests/engine/: test_cleared_engine.py  test_result_objects.py
tests/helpers/: __init__.py  segment_helpers.py
tests/integration/: __init__.py  test_multi_segment_example_config.py
tests/integration/fixtures/: multi_segment_config.yaml
tests/io/: __init__.py  test_base.py  test_edge_cases.py  test_filesystem.py  test_init.py  test_sql.py
tests/lint/: __init__.py  test_lint_with_yaml_files.py
tests/lint/rules/: __init__.py  test_rule_001_required_keys.py  test_rule_002_datetime_requires_timeshift.py  test_rule_003_unique_transformer_uids.py  test_rule_004_valid_table_dependencies.py  test_rule_005_valid_transformer_dependencies.py  test_rule_006_no_circular_dependencies.py  test_rule_007_uid_format.py  test_rule_008_datetime_timeshift_defined.py  test_rule_009_timeshift_risk_warnings.py  test_rule_010_column_dropper_dependencies.py  test_rule_011_timeshift_range_validation.py  test_rule_012_required_transformer_configs.py  (+8 more)
tests/transformers/: __init__.py  test_filterable_transformer.py  test_filtered_id.py  test_filtered_integration.py  test_filtered_temporal.py  test_id.py  test_id_in_pipeline.py  test_integration.py  test_registry.py  test_registry_edge_cases.py  test_registry_integration.py  test_registry_uid.py  test_rerun_consistency.py  test_simple.py  test_temporal.py  test_tutorial_config.py  test_tutorial_quickstart.py
(+2 files in other folders)
