[tool.poetry]
name = "cleared"
version = "0.1.0"
description = "A data de-identification framework for python"
authors = ["NOMA AI INC."]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nomaai/cleared"
repository = "https://github.com/nomaai/cleared"
keywords = ["de-identification", "healthcare", "privacy", "data-protection", "hipaa", "gdpr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Privacy",
    "Topic :: HIPAA",
    "Topic :: HIPAA",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mkdocs = "1.6.0"
ipykernel = "6.29.5"
jupyterlab = "4.2.5"
ruff = "0.5.1"
pytest = "8.2.2"
pre-commit = "3.7.1"
coverage = "7.5.4"
pytest-cov = "5.0.0"
gitchangelog = "3.0.4"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 88
preview = true
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=cleared",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
