[project]
name = "cleared"
version = "0.1.0"
description = "A data de-identification framework for python"
authors = [
    {name = "NOMA AI INC."}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["de-identification", "healthcare", "privacy", "data-protection", "hipaa", "gdpr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "hydra-core>=1.3.2",
    "faker>=37.11.0",
    "pandas>=2.3.3",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "networkx>=3.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "typer>=0.19.2",
    "yamllint>=1.37.1",
    "ruamel.yaml>=0.18.0",
    "jinja2>=3.1.2",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "mkdocs==1.6.1",
    "ipykernel==6.30.1",
    "jupyterlab==4.4.9",
    "ruff==0.14.0",
    "pytest==8.4.2",
    "pre-commit==4.3.0",
    "coverage==7.10.7",
    "pytest-cov==7.0.0",
    "gitchangelog==3.0.4",
    "pytest-mock>=3.13.0",
    "actionlint-py>=1.7.8.24",
    "pyarrow>=18.0.0",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "fastparquet>=2024.11.0",
]

[project.scripts]
cleared = "cleared.cli.main:app"

[project.urls]
Homepage = "https://github.com/nomaai/cleared"
Repository = "https://github.com/nomaai/cleared"

[tool.poetry.group.dev.dependencies]
mkdocs = "1.6.1"
ipykernel = "6.30.1"
jupyterlab = "4.4.9"
ruff = "0.14.0"
pytest = "8.4.2"
pre-commit = "4.3.0"
coverage = "7.10.7"
pytest-cov = "7.0.0"
gitchangelog = "3.0.4"
pytest-mock = "^3.13.0"
yamllint = "^1.37.1"
actionlint-py = "^1.7.8.24"
pyarrow = "^18.0.0"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
fastparquet = "^2024.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"